syntax = "proto3";
import "transaction.proto";
import "common.proto";

package types;

message Header {
	int64 version = 1;
	bytes parentHash = 2;
	bytes txHash = 3;
	bytes stateHash = 4;
	int64 height = 5;
	int64 blockTime = 6;
	int64 txCount = 9;
	bytes hash = 10;
	uint32 difficulty = 11;
	Signature signature = 8;
}

message Block {
	int64 version = 1;
	bytes parentHash = 2;
	bytes txHash = 3;
	bytes stateHash = 4;
	int64 height = 5;
	int64 blockTime = 6;
	uint32 difficulty = 11;
	Signature signature = 8;
	repeated Transaction txs = 7;
}

message Blocks {
	repeated Block items = 1;
}

message TransactionDetail {
	Transaction tx = 1;
	ReceiptData receipt = 2;
	repeated bytes proofs = 3;
	int64 height = 4;
	int64 index = 5;
	int64 blocktime = 6;
	int64 amount = 7;
	string fromaddr = 8;
}

message TransactionDetails {
	repeated TransactionDetail txs = 1;
}

//resp
message BlockDetails {
	repeated BlockDetail items = 1;
}

//resp
message Headers {
	repeated Header items = 1;
}

message BlockOverview {
	Header head = 1;
	int64 txCount = 2;
	repeated bytes txHashes = 3;
}


message ReceiptLog {
	int32 ty = 1;
	bytes log = 2;
}

//ty = 0 -> error Receipt
//ty = 1 -> CutFee //cut fee ,bug exec not ok
//ty = 2 -> exec ok
message Receipt {
	int32 ty = 1;
	repeated KeyValue KV = 2;
	repeated ReceiptLog logs = 3;
}

message ReceiptData {
	int32 ty = 1;
	repeated ReceiptLog logs = 3;
}

message BlockDetail {
	Block block = 1;
	repeated ReceiptData receipts = 2;
}

message Receipts {
	repeated Receipt receipts = 1;
}

message ReceiptCheckTxList {
	repeated string errs = 1;
}

message ChainStatus {
	int64 currentHeight = 1;
	int64 mempoolSize = 2;
	int64 msgQueueSize = 3;
}

//req
message ReqBlocks {
	int64 start = 1;
	int64 end = 2;
	bool Isdetail = 3;
	string pid = 4;
}

message MempoolSize {
	int64 size = 1;
}

message ReplyBlockHeight {
	int64 height = 1;
}

message TxResult {
	int64 height = 1;
	int32 index = 2;
	Transaction tx = 3;
	ReceiptData receiptdate = 4;
	int64 blocktime = 5;
	string actionName = 6;
}
